Corrected jumpy scrolling for content div. contentWrapper div is automatically added if contents div is present to make contents stay fixed and not jump around

--- a/markdown/md-styles.css
+++ b/markdown/md-styles.css
@@ -39,31 +39,27 @@ nav p {
 	margin: 0;
 	}
 
-/*
-	#floating-box {
-		display: block;
-		float: left;
-		position: absolute;
-		left: 0;
-		top: 0;
-		max-width: 15em;
-		overflow-x: hidden;
-		overflow-y: hidden;
-	}
-*/
+#contentsWrapper {
+	position: absolute;
+	left: 0.25em;
+	margin-left: 0.25em;
+	width: 18em;
+}
 
 #contents{
 	position: absolute;
-	left: 0.25em;
-	top: 0.25em;
+	top: 0;
 	border: 2px solid #AF9EA8;
-	max-width: 18em;
 	font-size: 60%;
-	padding-right: 0.5em;
+	padding: 0 0.5em;
+	width: 18em;
 	border-radius: .6em;
 	-moz-border-radius: .6em;	
 }
-
+#contents.fixed {
+	position: fixed;
+	top: 1.25em;
+}
 #contents div {
 	margin: 10px 0;
 }
@@ -113,8 +109,8 @@ pre {
     border-width: 1px;
     border-color: #777;
     border-style: solid;
-	border-radius: 10px;
-	-moz-border-radius: 10px;	
+    border-radius: 10px;
+    -moz-border-radius: 10px;	
     padding: 0.5em;
     background-color: #111;
     overflow: auto;
@@ -127,9 +123,9 @@ pre code {
 
 code {
     background-color: #F0E8E8;
-	padding: 3px;
-	border-radius: 6px;
-	-moz-border-radius: 6px;	
+    padding: 3px;
+    border-radius: 6px;
+    -moz-border-radius: 6px;	
 }
 
 p, li {
@@ -159,6 +155,8 @@ th, td {
 
 #toc h2 {
     cursor: pointer;
+    border-bottom: 2px solid #AF9EA8;
+    text-align: center;    
 }
 
 li.H2 {
@@ -249,3 +247,29 @@ h1+h2, h2+h3, hr+h2, hr+h3,
 dl+hr				{margin-top: -19px;}
 section, figure			{/* required to get the diamond to inherit a background */
 				 background-color: white;}
+/* iPad
+-------------------------------------------------------- */
+@media only screen and (max-device-width: 1024px) {
+body {
+	font-size: 120%;
+	line-height: 1.4;
+	}
+} /* @iPad */
+
+/* iPhone
+-------------------------------------------------------- */
+@media only screen and (max-device-width: 480px) {
+body {
+	text-align: left;
+	}
+article, footer {
+	width: auto;
+	}
+article {
+	padding: 0 10px;
+	}
+#contents {
+	display: none;
+	}
+} /* @iPhone */
+
